[gd_scene load_steps=11 format=3 uid="uid://cfl6073iriocx"]

[ext_resource type="Script" uid="uid://co1apckc7r85p" path="res://ca3 framework/2D Battle/AI enemies/Input/input code/input.gd" id="1_1b5aq"]
[ext_resource type="Script" uid="uid://gjsqpkkttdgt" path="res://ca3 framework/2D Battle/AI enemies/Input/input code/conditions_check.gd" id="2_md4tk"]
[ext_resource type="Script" uid="uid://bor84ruiyu7ll" path="res://ca3 framework/2D Battle/AI enemies/Input/input code/detector_list.gd" id="2_xh57s"]
[ext_resource type="Script" uid="uid://b7aejbeu8fpht" path="res://ca3 framework/2D Battle/AI enemies/Input/input code/fuzzy_evaluator.gd" id="3_x64dn"]
[ext_resource type="Script" uid="uid://b2v28abxc5nkd" path="res://ca3 framework/2D Battle/AI enemies/Input/input code/decision_output.gd" id="4_54p5g"]
[ext_resource type="Script" uid="uid://dewsor7nohchq" path="res://ca3 framework/2D Battle/AI enemies/Input/input code/min_max.gd" id="4_mksxx"]
[ext_resource type="Script" uid="uid://bui72yfej13o3" path="res://ca3 framework/2D Battle/AI enemies/Input/input code/logai.gd" id="5_toahw"]
[ext_resource type="Script" uid="uid://cbe2flmd5awk0" path="res://ca3 framework/2D Battle/AI enemies/Input/input code/attacks.gd" id="8_0ye8e"]
[ext_resource type="Script" uid="uid://cbrfc38823xeh" path="res://ca3 framework/2D Battle/AI enemies/Input/input code/fireball.gd" id="9_btfdf"]
[ext_resource type="PackedScene" uid="uid://bm8banxhbwcrk" path="res://ca3 framework/2D Battle/fireballs/Linear/AIfireball.tscn" id="10_uyjjo"]

[node name="AIINPUT" type="Node"]
script = ExtResource("1_1b5aq")

[node name="DetectorList" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_xh57s")
closest_enemy_distance = 99999.0

[node name="ConditionsCheck" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_md4tk")

[node name="FuzzyEvaluator" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_x64dn")
melee_check = 80.0
long_melee_check = 120.0
mid_check = 200.0
long_check = 300.0

[node name="MinMax" type="Node" parent="."]
script = ExtResource("4_mksxx")

[node name="DecisionOutput" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_54p5g")

[node name="LOGAI" type="Node" parent="."]
script = ExtResource("5_toahw")

[node name="Attacks" type="Node" parent="."]
script = ExtResource("8_0ye8e")

[node name="Fireball" type="Node" parent="."]
script = ExtResource("9_btfdf")
fireball_scene = ExtResource("10_uyjjo")

[node name="Update" type="Timer" parent="."]
autostart = true

[node name="IDLE" type="Timer" parent="."]

[node name="Attack" type="Timer" parent="."]
one_shot = true

[node name="AIDelay" type="Timer" parent="."]

[node name="FireballSpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="Update" to="." method="_on_update_timeout"]
[connection signal="timeout" from="IDLE" to="." method="_on_idle_timeout"]
[connection signal="timeout" from="Attack" to="Attacks" method="_on_attack_timeout"]
[connection signal="timeout" from="AIDelay" to="Attacks" method="_on_ai_delay_timeout"]
[connection signal="timeout" from="FireballSpawnTimer" to="Fireball" method="_on_fireball_spawn_timer_timeout"]
